# rust_mediacodec

./: Cargo.toml  README.md  run_android.bat
.cargo/: config.toml
examples/: decoding.rs  demuxing.rs
src/: codec.rs  error.rs  extractor.rs  format.rs  lib.rs  muxer.rs  native_window.rs  samples.rs
