[package]
name = "mediacodec"
version = "0.1.3"
edition = "2024"
resolver = "3"
rust-version = "1.92"
readme = "README.md"
authors = ["Adebayo Jagunmolu <hardebahyho@gmail.com>"]
description = "Rust bindings to MediaCodec, with an easy-to-use API"
repository = "https://github.com/bayo-code/rust_mediacodec"
license = "MIT"
keywords = ["ffi", "bindings", "multimedia", "codec", "android"]
categories = [
    "api-bindings",
    "encoding",
    "multimedia",
    "multimedia::audio",
    "multimedia::video",
]

[lib]
name = "mediacodec"
crate-type = ["cdylib"]

[[example]]
name = "demuxing"
crate-type = ["cdylib"]

[[example]]
name = "decoding"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.15"
jni = "0.22"
ndk-context = "0.1"
# samplerate = "0.2.4"
# image = "0.23.14"
# palette = "0.6.0"
# qrcode-generator = "4.1.2"
# resize = "0.7.2"

[features]
api24 = []
api26 = ["api24"]
api28 = ["api26"]
api29 = ["api28"]

[package.metadata.docs.rs]
features = ["api28"]
targets  = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
